<resources>
    <string name="app_name">DHFIT</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="comecar">Começar</string>
    <string name="explicacao"><![CDATA[Seja bem vindo<NOME>! Esse é um aplicativo que te ajuda a saber e calcular o seu Indice de Massa Corporal]]></string>
    <string name="vamos">Vamos Lá</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calcular">CALCULAR</string>
    <string name="info">Informações</string>
</resources>
