<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CadastroActivity"
    android:background="@android:color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="@string/app_name">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/user" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/inputIdade"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/StyledTilEditText"
                android:id="@+id/textNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:lines="1"
                android:textColor="@android:color/black"
                android:nextFocusForward="@id/inputIdade" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/inputPeso"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/idade"
                android:inputType="number"
                android:lines="1"
                android:textColor="@android:color/black"
                android:nextFocusForward="@id/inputPeso" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/inputAltura"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/peso"
                android:inputType="numberDecimal"
                android:lines="1"
                android:textColor="@android:color/black"
                android:nextFocusForward="@id/inputPeso" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/btnComecar"
            tools:layout_editor_absoluteX="20dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/altura"
                android:inputType="numberDecimal"
                android:lines="1"
                android:textColor="@android:color/black"
                android:nextFocusForward="@id/btnComecar" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnComecar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/comecar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>