<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ResultadoCadastro"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="@string/app_name">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/bemvindoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explicacao"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnVamosLa"
            tools:layout_editor_absoluteX="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:id="@+id/idadeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="9"
                    android:text="Text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_peso" />

                <TextView
                    android:id="@+id/pesoText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="9"
                    android:text="Text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_altura" />

                <TextView
                    android:id="@+id/alturaText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="9"
                    android:text="Text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnVamosLa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/vamos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>